# functional2

./: .gitignore  Main.hs  README.md  Week1.Exercise3.hs  Week1.hs  Week1_ex1.hs  Week1_ex2.hs  Week1_ex3.hs  Week2_ex1.hs  Week2_ex2.hs  func2.cabal  stack.yaml  week1_ex1.hs  week1_ex2.hs
.stack-work/: stack.sqlite3
.stack-work/ghci/0da49e5b/: cabal_macros.h
.stack-work/ghci/85fd05d8/: cabal_macros.h
.stack-work/ghci/b553efe7/: cabal_macros.h
.stack-work/ghci/b8a742a7/: cabal_macros.h
.stack-work/ghci/bf7f6ce8/: cabal_macros.h
.stack-work/ghci/c3fd971b/: cabal_macros.h
.stack-work/ghci/c847c7cf/: cabal_macros.h
.stack-work/ghci/cbb7d344/: cabal_macros.h
.stack-work/ghci/cebb6346/: cabal_macros.h
src/: Week1_ex1.hs  Week1_ex2.hs  Week1_ex3.hs  Week2_ex1.hs  Week2_ex2.hs  Week2_ex3.hs  Week3_ex1.hs  Week3_ex2.hs  Week3_ex3.hs
src/Utility/: Complex.hs  Simple.hs
src/Week1/: Exercise1.hs  Exercise2.hs  Exercise3.hs
src/Week2/: Exercise1.hs  Exercise2.hs  Exercise3.hs
src/Week3/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs
src/Week4/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise4Alt.hs
src/Week5/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Url2.hs  sites.json
src/Week6/: Exercise1.hs  Exercise2.hs  Exercise3.hs
src/Week7/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs
src/Week8/: Exercise1.hs  Exercise2.hs
src/week4/: Exercise1.hs
