name:                func2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/func2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
                  Week1.Exercise1
                  Week1.Exercise2
                  Week1.Exercise3
                  Week2.Exercise1
                  Week2.Exercise2
                  Week2.Exercise3
                  Week3.Exercise1
                  Week3.Exercise2
                  Week3.Exercise3
                  Week3.Exercise4
                  Week4.Exercise1
                  Week4.Exercise2
                  Week4.Exercise3
                  Week4.Exercise4
                  Week5.Exercise1
                  Week5.Exercise2
                  Week5.Exercise3
                  Week5.Exercise4
                  Week6.Exercise1
                  Week6.Exercise2
                  Week6.Exercise3
                  Utility.Simple
                  Utility.Complex
                  
  build-depends: base >= 4.7 && < 5, mtl, containers, endo, control-dsl, profunctors, kan-extensions, bifunctors, either, transformers, aeson, servant, servant-client, servant-docs, optparse-generic, aeson, bytestring, http-client, ansi-terminal

